[package]
name = "acursor"
version = "0.0.2"
authors = ["MoskalykA <100430077+MoskalykA@users.noreply.github.com>"]
edition = "2021"
description = "Various functions to write data with a Cursor"
documentation = "https://docs.rs/acursor"
repository = "https://github.com/MoskalykA/acursor"
license = "MIT"

[dependencies]
concat-idents = "1.1.4"
